# ezprompt

./: .gitignore  README.md  pyproject.toml
examples/: basic_call_to_gpt-4o-search.ipynb  basic_call_to_gpt-4o.ipynb
ez_prompt/: __init__.py  clean.py  data.py  exceptions.py  models.py  prompt.py
ezprompt/: __init__.py  data.py  exceptions.py  models.py  prompt.py  warnings.py
tests/: test_clean.py  test_data.py  test_models.py  test_prompt.py
tests/snapshots/test_data/test_get_statistics/: statistics.json
