[tool.poetry]
name = "ezprompt"
version = "0.1.0"
description = "An easy-to-use library for creating and seinding prompts to LLMs."
authors = ["Connor Skelland <34070858+Connor56@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
