[tool.poetry]
name = "ezprompt"
version = "0.1.0"
description = "An easy-to-use library for creating and seinding prompts to LLMs."
authors = ["Connor Skelland <34070858+Connor56@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.6"
pytest = "^8.3.5"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
openai = "^1.72.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
